syntax = "proto3";

package proto;
option go_package = "pkg/pb";

message SetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetResponse {
  bool success = 1;
}

message MSetRequest {
  repeated bytes keys = 1;
  repeated bytes values = 2;
}

message MSetResponse {
  bool success = 1;
}

message SetNXRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetNXResponse {
  bool success = 1;
}

message SetGetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetGetResponse {
  bool success = 1;
  bytes oldValue = 2;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
}

message MGetRequest {
  repeated bytes keys = 1;
}

message MGetResponse {
  repeated bytes values = 1;
}

message DelRequest {
  bytes key = 1;
}

message DelResponse {
  bool success = 1;
}

message IncrRequest {
  bytes key = 1;
  int32 delta = 2;
}

message IncrResponse {
  bool success = 1;
}