syntax = "proto3";

package proto;

option go_package = "internal/pb";

message LogEntry {
    string methodName = 1;
    bytes requestBytes = 2;
}

message LogEntryList {
    repeated LogEntry logEntries = 1;
}